--- a/docs/alkiln/older_versions.mdx
+++ b/docs/alkiln/older_versions.mdx
@@ -10,7 +10,7 @@ slug: /alkiln/old
 WIP
 :::
 
-This page has documentation for old versions Steps and such.
+This page has documentation for old versions of Steps and such.
 
 or
 
