--- a/docs/alkiln/security.mdx
+++ b/docs/alkiln/security.mdx
@@ -146,9 +146,9 @@ Sometimes authors do need to pass sensitive information to their tests. For exam
 
 ```yml
 jobs:
-  interview-testing:
+  alkiln-tests:
     runs-on: ubuntu-latest
-    name: Run end-to-end tests
+    name: Run ALKiln tests
 ```
 
 If this is the first environment variable you're adding, right below that last line add a new line like this:
@@ -286,7 +286,7 @@ This is different than the [ALKiln framework version](#freeze-framework). The fr
 
 **This is for any packages that:** have isolated server tests that run in GitHub
 
-[Isolated server tests](setup#isolated-server-how) are useful for security if you use them correctly.
+[Isolated server tests](setup.mdx#isolated-server-how) are useful for security if you use them correctly.
 
 For example, you have to avoid using hard-coded urls that are on your server. That is, avoid using `https://my-server.com` and interviews or other pages there. That will send the tests to your server, which goes around all these precautions and makes them less secure again.
 
