--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -367,7 +367,7 @@ Link to description of results/output
 For everyone:
 
 - You cannot edit the Project that the test is testing.
-- You will miss catching some kinds of mistakes. ["File not found" errors](trouble#file-not-found) can come up because of this.
+- You will miss catching some kinds of mistakes. ["File not found" errors](troubleshooting.mdx#file-not-found) can come up because of this.
 - Your tests can be more flaky. For example, if your server reloads while the tests are running, the tests may get unexpected results. You may have to start the tests all over again.
 
 For some people:
