--- a/docs/alkiln/troubleshooting.mdx
+++ b/docs/alkiln/troubleshooting.mdx
@@ -39,7 +39,7 @@ If you have a typo, ALKiln will be unable to find the variable or value that you
 
 Check for:
 
-- [Incorrectly setting checkbox values](writing#faq-checkbox-values)
+- [Incorrectly setting checkbox values](writing_tests.mdx#faq-checkbox-values)
 - Typos in variable names
 - Typos in the value for radio button options or similar fields
 
