--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -11,11 +11,17 @@ import GitHubSetup from './components/\_github_setup.md';
 WIP
 :::
 
-<!-- Doc about: things managers/admins do, testing modalities. Other docs shouldn't have to deal with differences between GitHub1, GitHub2, Playground. -->
-
 <!-- TODO: Add full instructions to manually create GitHub files and set secrets for the GitHub methods? I think the setup interview should do that. -->
-<!-- TODO: Should this include how to run the tests? Workflow files, trigger automatically, on a schedule, manually, tags, ALKiln versions, etc. Pros and cons are already kind of about running the tests. This is separate from providing all the necessary files. -->
-<!-- Workflow section about an action version vs. an alkiln version? -->
+<!-- TODO:
+Should this file include how to run the tests? Workflow files, trigger automatically, on a schedule, manually, tags, ALKiln versions, etc.
+
+The pros and cons sections are already kind of about running the tests. This is separate from providing all the necessary files. Workflow file setup often only happens once per repository when ALKiln things are in working order, but sometimes when new users are getting started they do tweak things for a bit.
+
+On the other hand, instructions for generally running tests should be in the main documentation writing tests file. Those who write tests will also run them and have to deal with that complexity. Things like adding env vars, using tags, running manually, maybe even ALKiln versions.
+
+That is, test-specific secrets might be separate from the SERVER_URL-type secrets. And those might be separate from errors you get when your dev API key changes or gets erased and tests suddenly fail.
+-->
+<!-- TODO: Workflow section about an action version vs. an alkiln version? -->
 
 This page will tell you about the different ways to set up and run your ALKiln tests. You can install and run ALKiln in different ways and in different environments. You can use as many of these methods as you want. They each have their advantages and disadvantages.
 
@@ -26,8 +32,8 @@ Maybe not. People just writing tests can skip this page. Also, if your package's
 On the other hand, people helping manage GitHub repositories or organizations and people helping manage docassemble servers might find this page useful.
 
 <!--
-- People managing GitHub repositories can use this page to install tests in a repository for the first time
 - People managing GitHub organizations can simplify future ALKiln test setup for their organization's repositories
+- People managing GitHub repositories can use this page to install tests in a repository for the first time
 - People managing a docassemble server can install ALKiln on that server to run tests in their Playground
  -->
 
@@ -55,15 +61,15 @@ Installing tests can involve one or more of these things:
 
 ## Recommended setup: GitHub tests that run on your server {#recommended-setup}
 
-This is the way we recommend setting up ALKiln tests for a repository for the first time. You are least likely to run into setup problems with this method.
+This is the way we recommend setting up ALKiln tests for a repository for the first time. You are least likely to run into setup problems with this method. Every repository that needs to use this kind of test must go through this setup process.
 
-The tests run whenever you commit any code to any branch on GitHub. You can read more [details and the pros and cons of GitHub tests](#github-details)[^1] below.
+The tests run whenever you commit any code to any branch on GitHub. You can read more [details and the pros and cons of GitHub tests](#github-details)[^types] below.
 
 **You need:**
 
 - A developer or admin account on your docassemble server.
 - A package with a repository on GitHub.
-- A collaborator or admin account on your package's GitHub repository[^2].
+- A collaborator or admin account on your package's GitHub repository[^edit].
 
 **It could help to know about:**
 
@@ -77,7 +83,7 @@ The setup interview will try to walk you through this.
 
 <GitHubSetup/>
 
-1. Add GitHub secrets to your repository (or organization[^3])
+1. Add GitHub secrets to your repository (or organization[^org])
 1. Make a new branch in your repository
 1. Add new code to that branch, including a new "workflow" file at the very least
 1. Make a pull request with that branch
@@ -96,11 +102,11 @@ Add link to going to GitHub "Actions" tab
 You can also run the tests by [triggering your workflow manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow#running-a-workflow).
 
 
-[^1]: You may have spotted this already, but two of these methods run tests on GitHub. They run the tests in different ways, though. We have not yet found good names for them that avoid this confusion.
+[^names]: You may have spotted this already, but two of these methods run tests on GitHub. They run the tests in different ways, though. We have not yet found good names for them that avoid this confusion.
 
-[^2]: That is, you need to have the ability to edit the code in your package's GitHub repository. If you own the repository or organization you are an admin and have the correct access level. If someone else is the owner and you are unsure of your access level, ask an admin what permission level you have for the repository. They can check [the repository's collaborators settings](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/managing-repository-settings/managing-teams-and-people-with-access-to-your-repository#filtering-the-list-of-teams-and-people).
+[^edit]: That is, you need to have the ability to edit the code in your package's GitHub repository. If you own the repository or organization you are an admin and have the correct access level. If someone else is the owner and you are unsure of your access level, ask an admin what permission level you have for the repository. They can check [the repository's collaborators settings](https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/managing-repository-settings/managing-teams-and-people-with-access-to-your-repository#filtering-the-list-of-teams-and-people).
 
-[^3]: If the repositories you want to test belong to one GitHub organization, get one of the organization's admins to run the ALKiln test setup interview and create organization secrets. They can also [create them manually](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-an-organization). Each repo the organization has will use those secrets so you don't have to bother adding them to every repository. Otherwise, you have to create the same secrets for each repo and if one of the values changes, you'll have to update it in every repo.
+[^org]: If the repositories you want to test belong to one GitHub organization, get one of the organization's admins to run the ALKiln test setup interview and create organization secrets. They can also [create them manually](https://docs.github.com/en/actions/security-guides/using-secrets-in-github-actions#creating-secrets-for-an-organization). Each repository the organization has will use those secrets so you don't have to bother adding them to every repository. Otherwise, you have to create the same secrets for each repository and if one of the values changes, you will have to update it in every repository.
 
 
 ## First test {#first-test}
@@ -127,8 +133,6 @@ You can wait to write more complex tests till your code is more stable. "Stable"
 :::warning TODO: add link
 You can read more about test files in other documentation.
 :::
-
-To run the tests you can commit new code to your GitHub repository or you can [trigger your workflow manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow#running-a-workflow). Authors usually [commit new code from their Playground](https://docassemble.org/docs/development.html#versioncontrol).
 
 
 ## Test in your Playground {#playground-how-to}
@@ -191,6 +195,8 @@ To run the tests:
 
 Isolated server tests are the most secure because they never interact with your server. They run on GitHub too, we just have not yet found better names for these test types. ALKiln makes a server on GitHub itself and runs the tests there.
 
+Every repository that needs to use this kind of test must go through this setup process.
+
 This is an advanced method and may not work for everyone. We are happy to help you with it.
 
 The tests run whenever you commit any code to any branch on GitHub. You can read more details and the [pros and cons of isolated server tests](#isolated-server-details) below.
@@ -198,7 +204,7 @@ The tests run whenever you commit any code to any branch on GitHub. You can read
 **You need:**
 
 - A package with a repository on GitHub.
-- A collaborator or admin account on your package's GitHub repository[^2].
+- A collaborator or admin account on your package's GitHub repository[^edit].
 
 **It helps to know about:**
 
@@ -379,6 +385,9 @@ For some people:
 Add links to docs about the trigger var
 :::
 
+<!--
+1. Optionally, if you have added "tags" to your tests using [the tag expression syntax](https://www.cuketest.com/en/cucumber/tag-expressions), you can use a tag expression to limit which tests you run. -->
+
 
 ## Isolated server test details {#isolated-server-details}
 
@@ -458,6 +467,25 @@ Custom env vars
 Custom inputs
 
 Tags
+
+1. Leave your other workflow secrets alone. Note, your `DOCASSEMBLE_DEVELOPER_API_KEY` and `SERVER_URL` do not need to be on the same server as your `CONFIG_CONTENTS`.
+1. Make a new workflow file so that it is similar to [ALKiln's own workflow file](https://github.com/SuffolkLITLab/ALKiln/blob/v5/.github/workflows/github_server.yml). If you want to stop old tests from running, delete your old workflow file.
+1. Read the notes in that file to see what you need to change to adapt the file for your project. Each of the notes is marked with `#### Developer note`.
+1. Commit the changes.
+
+:::caution
+To use this method, avoid using hard-coded urls to go to a test interview. That is, avoid using `https://my-server.com` to navigate to interviews or other server pages. That will send the tests to your server.
+:::
+
+If you need to troubleshoot the docker setup because the step to start the GitHub server keeps failing, you can make the docker startup logs visible and allow ALKiln to create an artifact of the docker installation logs. Do this by passing the input `SHOW_DOCKER_OUTPUT` to ALKiln's GitHub server action, like our script (linked above) does for itself. The input arguments might look like the below:
+
+```yml
+        with:
+          CONFIG_CONTENTS: "${{ secrets.CONFIG_CONTENTS }}"
+          SHOW_DOCKER_OUTPUT: true
+```
+
+It's possible to do more docker troubleshooting using [the tmate action](https://github.com/marketplace/actions/debugging-with-tmate). You can see code for that in our workflow file as well.
 
 -->
 
